# catalog_pollings_backend

./: .dockerignore  .env  Cargo.toml  Dockerfile  readme.MD
.github/workflows/: cd.yml  ci.yml
src/: db.rs  main.rs  models.rs  routes.rs  sse.rs  utils.rs  webauthn.rs
src/config/: app_config.rs
src/db/: auth_state_repo.rs  database.rs  options_repo.rs  polls_repo.rs  reg_state.rs  reg_state_repo.rs  users_repo.rs
src/middlewares/: authenticate.rs
src/models/: poll_api_model.rs
src/routes/: auth_route.rs  auth_routes.rs  general_routes.rs  poll_routes.rs  sse_route.rs
src/utils/: json_responder.rs  jwt.rs
