[package]
name = "polling-app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
mongodb = "3.1.0"
serde_json = "1.0.133"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
log = "0.4.22"
futures = "0.3.31"
nanoid = "0.4.0"
